@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -18,33 +18,44 @@ package org.springframework.beans.factory.config;
 
 import java.io.IOException;
 import java.io.Reader;
-import java.util.AbstractMap;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import java.util.Properties;
 import java.util.Set;
+import java.util.stream.Collectors;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
+import org.jspecify.annotations.Nullable;
+import org.yaml.snakeyaml.DumperOptions;
+import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
+import org.yaml.snakeyaml.composer.ComposerException;
 import org.yaml.snakeyaml.constructor.Constructor;
-import org.yaml.snakeyaml.nodes.MappingNode;
-import org.yaml.snakeyaml.parser.ParserException;
+import org.yaml.snakeyaml.inspector.TagInspector;
+import org.yaml.snakeyaml.nodes.Tag;
 import org.yaml.snakeyaml.reader.UnicodeReader;
+import org.yaml.snakeyaml.representer.Representer;
 
+import org.springframework.core.CollectionFactory;
 import org.springframework.core.io.Resource;
 import org.springframework.util.Assert;
+import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
 /**
  * Base class for YAML factories.
  *
+ * <p>Requires SnakeYAML 2.0 or higher.
+ *
  * @author Dave Syer
+ * @author Juergen Hoeller
+ * @author Sam Brannen
+ * @author Brian Clozel
  * @since 4.1
  */
 public abstract class YamlProcessor {
@@ -59,41 +70,43 @@ public abstract class YamlProcessor {
 
 	private boolean matchDefault = true;
 
+	private Set<String> supportedTypes = Collections.emptySet();
+
 
 	/**
 	 * A map of document matchers allowing callers to selectively use only
 	 * some of the documents in a YAML resource. In YAML documents are
-	 * separated by <code>---<code> lines, and each document is converted
-	 * to properties before the match is made. E.g.
+	 * separated by {@code ---} lines, and each document is converted
+	 * to properties before the match is made. For example,
 	 * <pre class="code">
 	 * environment: dev
-	 * url: http://dev.bar.com
+	 * url: https://dev.bar.com
 	 * name: Developer Setup
 	 * ---
 	 * environment: prod
-	 * url:http://foo.bar.com
+	 * url:https://foo.bar.com
 	 * name: My Cool App
 	 * </pre>
 	 * when mapped with
-	 * <code>documentMatchers = YamlProcessor.mapMatcher({"environment": "prod"})</code>
+	 * <pre class="code">
+	 * setDocumentMatchers(properties -&gt;
+	 *     ("prod".equals(properties.getProperty("environment")) ? MatchStatus.FOUND : MatchStatus.NOT_FOUND));
+	 * </pre>
 	 * would end up as
 	 * <pre class="code">
 	 * environment=prod
-	 * url=http://foo.bar.com
+	 * url=https://foo.bar.com
 	 * name=My Cool App
-	 * url=http://dev.bar.com
 	 * </pre>
-	 * @param matchers a map of keys to value patterns (regular expressions)
 	 */
 	public void setDocumentMatchers(DocumentMatcher... matchers) {
-		this.documentMatchers = Arrays.asList(matchers);
+		this.documentMatchers = List.of(matchers);
 	}
 
 	/**
 	 * Flag indicating that a document for which all the
 	 * {@link #setDocumentMatchers(DocumentMatcher...) document matchers} abstain will
-	 * nevertheless match.
-	 * @param matchDefault the flag to set (default true)
+	 * nevertheless match. Default is {@code true}.
 	 */
 	public void setMatchDefault(boolean matchDefault) {
 		this.matchDefault = matchDefault;
@@ -102,9 +115,7 @@ public abstract class YamlProcessor {
 	/**
 	 * Method to use for resolving resources. Each resource will be converted to a Map,
 	 * so this property is used to decide which map entries to keep in the final output
-	 * from this factory.
-	 * @param resolutionMethod the resolution method to set (defaults to
-	 * {@link ResolutionMethod#OVERRIDE}).
+	 * from this factory. Default is {@link ResolutionMethod#OVERRIDE}.
 	 */
 	public void setResolutionMethod(ResolutionMethod resolutionMethod) {
 		Assert.notNull(resolutionMethod, "ResolutionMethod must not be null");
@@ -119,13 +130,35 @@ public abstract class YamlProcessor {
 		this.resources = resources;
 	}
 
+	/**
+	 * Set the supported types that can be loaded from YAML documents.
+	 * <p>If no supported types are configured, only Java standard classes
+	 * (as defined in {@link org.yaml.snakeyaml.constructor.SafeConstructor})
+	 * encountered in YAML documents will be supported.
+	 * If an unsupported type is encountered, a {@link ComposerException}
+	 * will be thrown when the corresponding YAML node is processed.
+	 * @param supportedTypes the supported types, or an empty array to clear the
+	 * supported types
+	 * @since 5.1.16
+	 * @see #createYaml()
+	 */
+	public void setSupportedTypes(Class<?>... supportedTypes) {
+		if (ObjectUtils.isEmpty(supportedTypes)) {
+			this.supportedTypes = Collections.emptySet();
+		}
+		else {
+			Assert.noNullElements(supportedTypes, "'supportedTypes' must not contain null elements");
+			this.supportedTypes = Arrays.stream(supportedTypes).map(Class::getName)
+					.collect(Collectors.toUnmodifiableSet());
+		}
+	}
 
 	/**
 	 * Provide an opportunity for subclasses to process the Yaml parsed from the supplied
 	 * resources. Each resource is parsed in turn and the documents inside checked against
 	 * the {@link #setDocumentMatchers(DocumentMatcher...) matchers}. If a document
 	 * matches it is passed into the callback, along with its representation as Properties.
-	 * Depending on the {@link #setResolutionMethod(ResolutionMethod)} not all of the
+	 * Depending on the {@link #setResolutionMethod(ResolutionMethod)} not all the
 	 * documents will be parsed.
 	 * @param callback a callback to delegate to once matching documents are found
 	 * @see #createYaml()
@@ -142,9 +175,22 @@ public abstract class YamlProcessor {
 
 	/**
 	 * Create the {@link Yaml} instance to use.
+	 * <p>The default implementation sets the "allowDuplicateKeys" flag to {@code false},
+	 * enabling built-in duplicate key handling.
+	 * <p>If custom {@linkplain #setSupportedTypes supported types} have been configured,
+	 * the default implementation creates a {@code Yaml} instance that filters out
+	 * unsupported types encountered in YAML documents.
+	 * If an unsupported type is encountered, a {@link ComposerException} will be
+	 * thrown when the node is processed.
+	 * @see LoaderOptions#setAllowDuplicateKeys(boolean)
 	 */
 	protected Yaml createYaml() {
-		return new Yaml(new StrictMapAppenderConstructor());
+		LoaderOptions loaderOptions = new LoaderOptions();
+		loaderOptions.setAllowDuplicateKeys(false);
+		loaderOptions.setTagInspector(new SupportedTagInspector());
+		DumperOptions dumperOptions = new DumperOptions();
+		return new Yaml(new Constructor(loaderOptions), new Representer(dumperOptions),
+				dumperOptions, loaderOptions);
 	}
 
 	private boolean process(MatchCallback callback, Yaml yaml, Resource resource) {
@@ -153,8 +199,7 @@ public abstract class YamlProcessor {
 			if (logger.isDebugEnabled()) {
 				logger.debug("Loading from YAML: " + resource);
 			}
-			Reader reader = new UnicodeReader(resource.getInputStream());
-			try {
+			try (Reader reader = new UnicodeReader(resource.getInputStream())) {
 				for (Object object : yaml.loadAll(reader)) {
 					if (object != null && process(asMap(object), callback)) {
 						count++;
@@ -167,9 +212,6 @@ public abstract class YamlProcessor {
 					logger.debug("Loaded " + count + " document" + (count > 1 ? "s" : "") +
 							" from YAML resource: " + resource);
 				}
-			}
-			finally {
-				reader.close();
 			}
 		}
 		catch (IOException ex) {
@@ -188,23 +230,20 @@ public abstract class YamlProcessor {
 		}
 	}
 
-	@SuppressWarnings("unchecked")
+	@SuppressWarnings({"rawtypes", "unchecked"})
 	private Map<String, Object> asMap(Object object) {
 		// YAML can have numbers as keys
-		Map<String, Object> result = new LinkedHashMap<String, Object>();
-		if (!(object instanceof Map)) {
+		Map<String, Object> result = new LinkedHashMap<>();
+		if (!(object instanceof Map map)) {
 			// A document can be a text literal
 			result.put("document", object);
 			return result;
 		}
 
-		Map<Object, Object> map = (Map<Object, Object>) object;
-		for (Entry<Object, Object> entry : map.entrySet()) {
-			Object value = entry.getValue();
+		map.forEach((key, value) -> {
 			if (value instanceof Map) {
 				value = asMap(value);
 			}
-			Object key = entry.getKey();
 			if (key instanceof CharSequence) {
 				result.put(key.toString(), value);
 			}
@@ -212,12 +251,12 @@ public abstract class YamlProcessor {
 				// It has to be a map key in this case
 				result.put("[" + key.toString() + "]", value);
 			}
-		}
+		});
 		return result;
 	}
 
 	private boolean process(Map<String, Object> map, MatchCallback callback) {
-		Properties properties = new Properties();
+		Properties properties = CollectionFactory.createStringAdaptingProperties();
 		properties.putAll(getFlattenedMap(map));
 
 		if (this.documentMatchers.isEmpty()) {
@@ -265,58 +304,85 @@ public abstract class YamlProcessor {
 	 * @since 4.1.3
 	 */
 	protected final Map<String, Object> getFlattenedMap(Map<String, Object> source) {
-		Map<String, Object> result = new LinkedHashMap<String, Object>();
-		buildFlattenedMap(result, source, null);
+		return getFlattenedMap(source, false, null);
+	}
+
+	/**
+	 * Return a flattened version of the given map, recursively following any nested Map
+	 * or Collection values. Entries from the resulting map retain the same order as the
+	 * source. When called with the Map from a {@link MatchCallback} the result will
+	 * contain the same values as the {@link MatchCallback} Properties.
+	 * @param source the source map
+	 * @param includeEmpty whether empty entries should be included in the result
+	 * @param emptyValue the value used to represent an empty entry &mdash; for
+	 * example, {@code null} or an empty {@code String}
+	 * @return a flattened map
+	 * @since 7.0.4
+	 */
+	protected final Map<String, Object> getFlattenedMap(Map<String, Object> source, boolean includeEmpty,
+			@Nullable Object emptyValue) {
+
+		Map<String, Object> result = new LinkedHashMap<>();
+		buildFlattenedMap(result, source, null, includeEmpty, emptyValue);
 		return result;
 	}
 
-	private void buildFlattenedMap(Map<String, Object> result, Map<String, Object> source, String path) {
-		for (Entry<String, Object> entry : source.entrySet()) {
-			String key = entry.getKey();
+	@SuppressWarnings({"rawtypes", "unchecked"})
+	private void buildFlattenedMap(Map<String, Object> result, Map<String, Object> source, @Nullable String path,
+			boolean includeEmpty, @Nullable Object emptyValue) {
+
+		if (includeEmpty && source.isEmpty()) {
+			result.put(path, emptyValue);
+			return;
+		}
+		source.forEach((key, value) -> {
 			if (StringUtils.hasText(path)) {
 				if (key.startsWith("[")) {
 					key = path + key;
 				}
 				else {
-					key = path + "." + key;
+					key = path + '.' + key;
 				}
 			}
-			Object value = entry.getValue();
 			if (value instanceof String) {
 				result.put(key, value);
 			}
-			else if (value instanceof Map) {
+			else if (value instanceof Map map) {
 				// Need a compound key
-				@SuppressWarnings("unchecked")
-				Map<String, Object> map = (Map<String, Object>) value;
-				buildFlattenedMap(result, map, key);
+				buildFlattenedMap(result, map, key, includeEmpty, emptyValue);
 			}
-			else if (value instanceof Collection) {
+			else if (value instanceof Collection collection) {
 				// Need a compound key
-				@SuppressWarnings("unchecked")
-				Collection<Object> collection = (Collection<Object>) value;
-				int count = 0;
-				for (Object object : collection) {
-					buildFlattenedMap(result,
-							Collections.singletonMap("[" + (count++) + "]", object), key);
+				if (collection.isEmpty()) {
+					result.put(key, "");
+				}
+				else {
+					int count = 0;
+					for (Object object : collection) {
+						buildFlattenedMap(result, Collections.singletonMap(
+								"[" + (count++) + "]", object), key, includeEmpty, emptyValue);
+					}
 				}
 			}
 			else {
-				result.put(key, value != null ? value : "");
+				result.put(key, (value != null ? value : (includeEmpty ? emptyValue : "")));
 			}
-		}
+		});
 	}
 
 
 	/**
-	 * Callback interface used to process properties in a resulting map.
+	 * Callback interface used to process the YAML parsing results.
 	 */
+	@FunctionalInterface
 	public interface MatchCallback {
 
 		/**
-		 * Process the properties.
-		 * @param properties the properties to process
-		 * @param map a mutable result map
+		 * Process the given representation of the parsing results.
+		 * @param properties the properties to process (as a flattened
+		 * representation with indexed keys in case of a collection or map)
+		 * @param map the result map (preserving the original value structure
+		 * in the YAML document)
 		 */
 		void process(Properties properties, Map<String, Object> map);
 	}
@@ -325,6 +391,7 @@ public abstract class YamlProcessor {
 	/**
 	 * Strategy interface used to test if properties match.
 	 */
+	@FunctionalInterface
 	public interface DocumentMatcher {
 
 		/**
@@ -337,7 +404,7 @@ public abstract class YamlProcessor {
 
 
 	/**
-	 * Status returned from {@link DocumentMatcher#matches(java.util.Properties)}
+	 * Status returned from {@link DocumentMatcher#matches(java.util.Properties)}.
 	 */
 	public enum MatchStatus {
 
@@ -386,44 +453,11 @@ public abstract class YamlProcessor {
 		FIRST_FOUND
 	}
 
-
-	/**
-	 * A specialized {@link Constructor} that checks for duplicate keys.
-	 */
-	protected static class StrictMapAppenderConstructor extends Constructor {
-
-		// Declared as public for use in subclasses
-		public StrictMapAppenderConstructor() {
-			super();
-		}
+	private class SupportedTagInspector implements TagInspector {
 
 		@Override
-		protected Map<Object, Object> constructMapping(MappingNode node) {
-			try {
-				return super.constructMapping(node);
-			}
-			catch (IllegalStateException ex) {
-				throw new ParserException("while parsing MappingNode",
-						node.getStartMark(), ex.getMessage(), node.getEndMark());
-			}
-		}
-
-		@Override
-		protected Map<Object, Object> createDefaultMap() {
-			final Map<Object, Object> delegate = super.createDefaultMap();
-			return new AbstractMap<Object, Object>() {
-				@Override
-				public Object put(Object key, Object value) {
-					if (delegate.containsKey(key)) {
-						throw new IllegalStateException("Duplicate key: " + key);
-					}
-					return delegate.put(key, value);
-				}
-				@Override
-				public Set<Entry<Object, Object>> entrySet() {
-					return delegate.entrySet();
-				}
-			};
+		public boolean isGlobalTagAllowed(Tag tag) {
+			return supportedTypes.contains(tag.getClassName());
 		}
 	}
 
