@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2016 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -16,6 +16,7 @@
 
 package org.springframework.context.event;
 
+import java.io.Serializable;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
@@ -24,14 +25,18 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Optional;
 import java.util.Set;
+import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
-import org.junit.After;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ExpectedException;
+import jakarta.annotation.PostConstruct;
+import jakarta.inject.Inject;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
+import reactor.core.publisher.Flux;
+import reactor.core.publisher.Mono;
 
 import org.springframework.aop.framework.Advised;
 import org.springframework.aop.support.AopUtils;
@@ -39,6 +44,7 @@ import org.springframework.beans.factory.BeanCreationException;
 import org.springframework.beans.factory.BeanInitializationException;
 import org.springframework.beans.factory.ObjectFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.PayloadApplicationEvent;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
@@ -60,28 +66,28 @@ import org.springframework.scheduling.annotation.Async;
 import org.springframework.scheduling.annotation.EnableAsync;
 import org.springframework.stereotype.Component;
 import org.springframework.util.Assert;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.validation.beanvalidation.MethodValidationPostProcessor;
 
-import static org.hamcrest.Matchers.*;
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
 
 /**
  * @author Stephane Nicoll
  * @author Juergen Hoeller
  */
-public class AnnotationDrivenEventListenerTests {
-
-	@Rule
-	public final ExpectedException thrown = ExpectedException.none();
+class AnnotationDrivenEventListenerTests {
 
 	private ConfigurableApplicationContext context;
 
 	private EventCollector eventCollector;
 
-	private CountDownLatch countDownLatch; // 1 call by default
+	private CountDownLatch countDownLatch;  // 1 call by default
 
 
-	@After
-	public void closeContext() {
+	@AfterEach
+	void closeContext() {
 		if (this.context != null) {
 			this.context.close();
 		}
@@ -89,20 +95,34 @@ public class AnnotationDrivenEventListenerTests {
 
 
 	@Test
-	public void simpleEventJavaConfig() {
+	void simpleEventJavaConfig() {
 		load(TestEventListener.class);
 		TestEvent event = new TestEvent(this, "test");
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
+
 		this.eventCollector.assertNoEventReceived(listener);
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(listener, event);
 		this.eventCollector.assertTotalEventsCount(1);
+
+		this.eventCollector.clear();
+		TestEvent otherEvent = new TestEvent(this, Integer.valueOf(1));
+		this.context.publishEvent(otherEvent);
+		this.eventCollector.assertEvent(listener, otherEvent);
+		this.eventCollector.assertTotalEventsCount(1);
+
+		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
+				l instanceof SmartApplicationListener sal && sal.getListenerId().contains("TestEvent"));
+		this.eventCollector.clear();
+		this.context.publishEvent(event);
+		this.eventCollector.assertNoEventReceived(listener);
 	}
 
 	@Test
-	public void simpleEventXmlConfig() {
+	void simpleEventXmlConfig() {
 		this.context = new ClassPathXmlApplicationContext(
 				"org/springframework/context/event/simple-event-configuration.xml");
+
 		TestEvent event = new TestEvent(this, "test");
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 		this.eventCollector = getEventCollector(this.context);
@@ -111,12 +131,17 @@ public class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(listener, event);
 		this.eventCollector.assertTotalEventsCount(1);
+
+		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
+				l instanceof SmartApplicationListener sal && sal.getListenerId().contains("TestEvent"));
+		this.eventCollector.clear();
+		this.context.publishEvent(event);
+		this.eventCollector.assertNoEventReceived(listener);
 	}
 
 	@Test
-	public void metaAnnotationIsDiscovered() {
+	void metaAnnotationIsDiscovered() {
 		load(MetaAnnotationListenerTestBean.class);
-
 		MetaAnnotationListenerTestBean bean = this.context.getBean(MetaAnnotationListenerTestBean.class);
 		this.eventCollector.assertNoEventReceived(bean);
 
@@ -124,57 +149,65 @@ public class AnnotationDrivenEventListenerTests {
 		this.context.publishEvent(event);
 		this.eventCollector.assertEvent(bean, event);
 		this.eventCollector.assertTotalEventsCount(1);
+
+		context.getBean(ApplicationEventMulticaster.class).removeApplicationListeners(l ->
+				l instanceof SmartApplicationListener sal && sal.getListenerId().equals("foo"));
+		this.eventCollector.clear();
+		this.context.publishEvent(event);
+		this.eventCollector.assertNoEventReceived(bean);
 	}
 
 	@Test
-	public void contextEventsAreReceived() {
+	void contextEventsAreReceived() {
 		load(ContextEventListener.class);
 		ContextEventListener listener = this.context.getBean(ContextEventListener.class);
 
 		List<Object> events = this.eventCollector.getEvents(listener);
-		assertEquals("Wrong number of initial context events", 1, events.size());
-		assertEquals(ContextRefreshedEvent.class, events.get(0).getClass());
+		assertThat(events).as("Wrong number of initial context events").hasSize(1);
+		assertThat(events.get(0).getClass()).isEqualTo(ContextRefreshedEvent.class);
+
+		this.context.start();
+		List<Object> eventsAfterStart = this.eventCollector.getEvents(listener);
+		assertThat(eventsAfterStart).as("Wrong number of context events on start").hasSize(2);
+		assertThat(eventsAfterStart.get(1).getClass()).isEqualTo(ContextStartedEvent.class);
+		this.eventCollector.assertTotalEventsCount(2);
 
 		this.context.stop();
 		List<Object> eventsAfterStop = this.eventCollector.getEvents(listener);
-		assertEquals("Wrong number of context events on shutdown", 2, eventsAfterStop.size());
-		assertEquals(ContextStoppedEvent.class, eventsAfterStop.get(1).getClass());
-		this.eventCollector.assertTotalEventsCount(2);
+		assertThat(eventsAfterStop).as("Wrong number of context events on stop").hasSize(3);
+		assertThat(eventsAfterStop.get(2).getClass()).isEqualTo(ContextStoppedEvent.class);
+		this.eventCollector.assertTotalEventsCount(3);
+
+		this.context.close();
+		List<Object> eventsAfterClose = this.eventCollector.getEvents(listener);
+		assertThat(eventsAfterClose).as("Wrong number of context events on close").hasSize(4);
+		assertThat(eventsAfterClose.get(3).getClass()).isEqualTo(ContextClosedEvent.class);
+		this.eventCollector.assertTotalEventsCount(4);
+
+		// Further events are supposed to be ignored after context close
+		this.context.publishEvent(new ContextClosedEvent(this.context));
+		this.eventCollector.assertTotalEventsCount(4);
 	}
 
 	@Test
-	public void methodSignatureNoEvent() {
+	void methodSignatureNoEvent() {
+		@SuppressWarnings("resource")
 		AnnotationConfigApplicationContext failingContext =
 				new AnnotationConfigApplicationContext();
 		failingContext.register(BasicConfiguration.class,
 				InvalidMethodSignatureEventListener.class);
 
-		this.thrown.expect(BeanInitializationException.class);
-		this.thrown.expectMessage(InvalidMethodSignatureEventListener.class.getName());
-		this.thrown.expectMessage("cannotBeCalled");
-		failingContext.refresh();
+		assertThatExceptionOfType(BeanInitializationException.class).isThrownBy(failingContext::refresh)
+			.withMessageContaining(InvalidMethodSignatureEventListener.class.getName())
+			.withMessageContaining("cannotBeCalled");
 	}
 
 	@Test
-	public void asyncWithReplyEventListener() {
-		AnnotationConfigApplicationContext failingContext =
-				new AnnotationConfigApplicationContext();
-		failingContext.register(BasicConfiguration.class,
-				InvalidAsyncEventListener.class);
-
-		this.thrown.expect(BeanInitializationException.class);
-		this.thrown.expectMessage(InvalidAsyncEventListener.class.getName());
-		this.thrown.expectMessage("asyncCannotUseReply");
-		failingContext.refresh();
-	}
-
-	@Test
-	public void simpleReply() {
+	void simpleReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "dummy");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
-
 
 		this.eventCollector.assertNoEventReceived(listener);
 		this.eventCollector.assertNoEventReceived(replyEventListener);
@@ -185,7 +218,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void nullReplyIgnored() {
+	void nullReplyIgnored() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, null); // No response
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -200,7 +233,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void arrayReply() {
+	void arrayReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, new String[]{"first", "second"});
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -215,7 +248,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void collectionReply() {
+	void collectionReply() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		Set<Object> replies = new LinkedHashSet<>();
 		replies.add("first");
@@ -234,7 +267,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void collectionReplyNullValue() {
+	void collectionReplyNullValue() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, Arrays.asList(null, "test"));
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
@@ -249,11 +282,56 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithSimpleInterfaceProxy() throws Exception {
+	void completableFutureReply() {
+		load(TestEventListener.class, ReplyEventListener.class);
+		AnotherTestEvent event = new AnotherTestEvent(this, CompletableFuture.completedFuture("dummy"));
+		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
+		TestEventListener listener = this.context.getBean(TestEventListener.class);
+
+		this.eventCollector.assertNoEventReceived(listener);
+		this.eventCollector.assertNoEventReceived(replyEventListener);
+		this.context.publishEvent(event);
+		this.eventCollector.assertEvent(replyEventListener, event);
+		this.eventCollector.assertEvent(listener, "dummy"); // reply
+		this.eventCollector.assertTotalEventsCount(2);
+	}
+
+	@Test
+	void monoReply() {
+		load(TestEventListener.class, ReplyEventListener.class);
+		AnotherTestEvent event = new AnotherTestEvent(this, Mono.just("dummy"));
+		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
+		TestEventListener listener = this.context.getBean(TestEventListener.class);
+
+		this.eventCollector.assertNoEventReceived(listener);
+		this.eventCollector.assertNoEventReceived(replyEventListener);
+		this.context.publishEvent(event);
+		this.eventCollector.assertEvent(replyEventListener, event);
+		this.eventCollector.assertEvent(listener, "dummy"); // reply
+		this.eventCollector.assertTotalEventsCount(2);
+	}
+
+	@Test
+	void fluxReply() {
+		load(TestEventListener.class, ReplyEventListener.class);
+		AnotherTestEvent event = new AnotherTestEvent(this, Flux.just("dummy1", "dummy2"));
+		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
+		TestEventListener listener = this.context.getBean(TestEventListener.class);
+
+		this.eventCollector.assertNoEventReceived(listener);
+		this.eventCollector.assertNoEventReceived(replyEventListener);
+		this.context.publishEvent(event);
+		this.eventCollector.assertEvent(replyEventListener, event);
+		this.eventCollector.assertEvent(listener, "dummy1", "dummy2"); // reply
+		this.eventCollector.assertTotalEventsCount(3);
+	}
+
+	@Test
+	void eventListenerWorksWithSimpleInterfaceProxy() {
 		load(ScopedProxyTestBean.class);
 
 		SimpleService proxy = this.context.getBean(SimpleService.class);
-		assertTrue("bean should be a proxy", proxy instanceof Advised);
+		assertThat(proxy).as("bean should be a proxy").isInstanceOf(Advised.class);
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -266,11 +344,11 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithAnnotatedInterfaceProxy() throws Exception {
+	void eventListenerWorksWithAnnotatedInterfaceProxy() {
 		load(AnnotatedProxyTestBean.class);
 
 		AnnotatedSimpleService proxy = this.context.getBean(AnnotatedSimpleService.class);
-		assertTrue("bean should be a proxy", proxy instanceof Advised);
+		assertThat(proxy).as("bean should be a proxy").isInstanceOf(Advised.class);
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -283,11 +361,11 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void eventListenerWorksWithCglibProxy() throws Exception {
+	void eventListenerWorksWithCglibProxy() {
 		load(CglibProxyTestBean.class);
 
 		CglibProxyTestBean proxy = this.context.getBean(CglibProxyTestBean.class);
-		assertTrue("bean should be a cglib proxy", AopUtils.isCglibProxy(proxy));
+		assertThat(AopUtils.isCglibProxy(proxy)).as("bean should be a cglib proxy").isTrue();
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -300,24 +378,20 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void privateMethodOnCglibProxyFails() throws Exception {
-		try {
-			load(CglibProxyWithPrivateMethod.class);
-			fail("Should have thrown BeanInitializationException");
-		}
-		catch (BeanInitializationException ex) {
-			assertTrue(ex.getCause() instanceof IllegalStateException);
-		}
+	void privateMethodOnCglibProxyFails() {
+		assertThatExceptionOfType(BeanInitializationException.class).isThrownBy(() ->
+				load(CglibProxyWithPrivateMethod.class))
+			.withCauseInstanceOf(IllegalStateException.class);
 	}
 
 	@Test
-	public void eventListenerWorksWithCustomScope() throws Exception {
+	void eventListenerWorksWithCustomScope() {
 		load(CustomScopeTestBean.class);
 		CustomScope customScope = new CustomScope();
 		this.context.getBeanFactory().registerScope("custom", customScope);
 
 		CustomScopeTestBean proxy = this.context.getBean(CustomScopeTestBean.class);
-		assertTrue("bean should be a cglib proxy", AopUtils.isCglibProxy(proxy));
+		assertThat(AopUtils.isCglibProxy(proxy)).as("bean should be a cglib proxy").isTrue();
 		this.eventCollector.assertNoEventReceived(proxy.getId());
 
 		this.context.publishEvent(new ContextRefreshedEvent(this.context));
@@ -333,19 +407,14 @@ public class AnnotationDrivenEventListenerTests {
 		this.eventCollector.assertEvent(proxy.getId(), event);
 		this.eventCollector.assertTotalEventsCount(1);
 
-		try {
-			customScope.active = false;
-			this.context.publishEvent(new TestEvent());
-			fail("Should have thrown IllegalStateException");
-		}
-		catch (BeanCreationException ex) {
-			// expected
-			assertTrue(ex.getCause() instanceof IllegalStateException);
-		}
+		customScope.active = false;
+		assertThatExceptionOfType(BeanCreationException.class).isThrownBy(() ->
+				this.context.publishEvent(new TestEvent()))
+			.withCauseInstanceOf(IllegalStateException.class);
 	}
 
 	@Test
-	public void asyncProcessingApplied() throws InterruptedException {
+	void asyncProcessingApplied() throws InterruptedException {
 		loadAsync(AsyncEventListener.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -360,7 +429,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
+	void asyncProcessingAppliedWithInterfaceProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, SimpleProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -375,7 +444,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
+	void asyncProcessingAppliedWithScopedProxy() throws InterruptedException {
 		doLoad(AsyncConfigurationWithInterfaces.class, ScopedProxyTestBean.class);
 
 		String threadName = Thread.currentThread().getName();
@@ -390,24 +459,20 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void exceptionPropagated() {
+	void exceptionPropagated() {
 		load(ExceptionEventListener.class);
 		TestEvent event = new TestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
 		this.eventCollector.assertNoEventReceived(listener);
-		try {
-			this.context.publishEvent(event);
-			fail("An exception should have thrown");
-		}
-		catch (IllegalStateException e) {
-			assertEquals("Wrong exception", "Test exception", e.getMessage());
-			this.eventCollector.assertEvent(listener, event);
-			this.eventCollector.assertTotalEventsCount(1);
-		}
+		assertThatIllegalStateException().isThrownBy(() ->
+				this.context.publishEvent(event))
+			.withMessage("Test exception");
+		this.eventCollector.assertEvent(listener, event);
+		this.eventCollector.assertTotalEventsCount(1);
 	}
 
 	@Test
-	public void exceptionNotPropagatedWithAsync() throws InterruptedException {
+	void exceptionNotPropagatedWithAsync() throws InterruptedException {
 		loadAsync(ExceptionEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "fail");
 		ExceptionEventListener listener = this.context.getBean(ExceptionEventListener.class);
@@ -421,7 +486,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithSimplePayload() {
+	void listenerWithSimplePayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -432,7 +497,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithNonMatchingPayload() {
+	void listenerWithNonMatchingPayload() {
 		load(TestEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
 
@@ -443,12 +508,11 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void replyWithPayload() {
+	void replyWithPayload() {
 		load(TestEventListener.class, ReplyEventListener.class);
 		AnotherTestEvent event = new AnotherTestEvent(this, "String");
 		ReplyEventListener replyEventListener = this.context.getBean(ReplyEventListener.class);
 		TestEventListener listener = this.context.getBean(TestEventListener.class);
-
 
 		this.eventCollector.assertNoEventReceived(listener);
 		this.eventCollector.assertNoEventReceived(replyEventListener);
@@ -459,7 +523,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithGenericApplicationEvent() {
+	void listenerWithGenericApplicationEvent() {
 		load(GenericEventListener.class);
 		GenericEventListener listener = this.context.getBean(GenericEventListener.class);
 
@@ -470,7 +534,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithResolvableTypeEvent() {
+	void listenerWithResolvableTypeEvent() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -482,7 +546,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void listenerWithResolvableTypeEventWrongGeneric() {
+	void listenerWithResolvableTypeEventWrongGeneric() {
 		load(ResolvableTypeEventListener.class);
 		ResolvableTypeEventListener listener = this.context.getBean(ResolvableTypeEventListener.class);
 
@@ -494,11 +558,21 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void conditionMatch() {
+	void conditionMatch() {
+		validateConditionMatch(ConditionalEventListener.class);
+	}
+
+	@Test
+	void conditionMatchWithProxy() {
+		validateConditionMatch(ConditionalEventListener.class, MethodValidationPostProcessor.class);
+	}
+
+	private void validateConditionMatch(Class<?>... classes) {
 		long timestamp = System.currentTimeMillis();
-		load(ConditionalEventListener.class);
+		load(classes);
 		TestEvent event = new TestEvent(this, "OK");
-		TestEventListener listener = this.context.getBean(ConditionalEventListener.class);
+
+		ConditionalEventInterface listener = this.context.getBean(ConditionalEventInterface.class);
 		this.eventCollector.assertNoEventReceived(listener);
 
 		this.context.publishEvent(event);
@@ -507,6 +581,9 @@ public class AnnotationDrivenEventListenerTests {
 
 		this.context.publishEvent("OK");
 		this.eventCollector.assertEvent(listener, event, "OK");
+		this.eventCollector.assertTotalEventsCount(2);
+
+		this.context.publishEvent("NOT OK");
 		this.eventCollector.assertTotalEventsCount(2);
 
 		this.context.publishEvent(timestamp);
@@ -519,7 +596,7 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void conditionDoesNotMatch() {
+	void conditionDoesNotMatch() {
 		long maxLong = Long.MAX_VALUE;
 		load(ConditionalEventListener.class);
 		TestEvent event = new TestEvent(this, "KO");
@@ -544,13 +621,31 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 	@Test
-	public void orderedListeners() {
+	void orderedListeners() {
 		load(OrderedTestListener.class);
 		OrderedTestListener listener = this.context.getBean(OrderedTestListener.class);
 
-		assertTrue(listener.order.isEmpty());
+		assertThat(listener.order).isEmpty();
 		this.context.publishEvent("whatever");
-		assertThat(listener.order, contains("first", "second", "third"));
+		assertThat(listener.order).contains("first", "second", "third");
+	}
+
+	@Test
+	void publicSubclassWithInheritedEventListener() {
+		load(PublicSubclassWithInheritedEventListener.class);
+		TestEventListener listener = this.context.getBean(PublicSubclassWithInheritedEventListener.class);
+
+		this.eventCollector.assertNoEventReceived(listener);
+		this.context.publishEvent("test");
+		this.eventCollector.assertEvent(listener, "test");
+		this.eventCollector.assertTotalEventsCount(1);
+	}
+
+	@Test
+	void missingListenerBeanIgnored() {
+		load(MissingEventListener.class);
+		context.getBean(UseMissingEventListener.class);
+		context.publishEvent(new TestEvent(this));
 	}
 
 
@@ -558,14 +653,14 @@ public class AnnotationDrivenEventListenerTests {
 		List<Class<?>> allClasses = new ArrayList<>();
 		allClasses.add(BasicConfiguration.class);
 		allClasses.addAll(Arrays.asList(classes));
-		doLoad(allClasses.toArray(new Class<?>[allClasses.size()]));
+		doLoad(allClasses.toArray(new Class<?>[0]));
 	}
 
 	private void loadAsync(Class<?>... classes) {
 		List<Class<?>> allClasses = new ArrayList<>();
 		allClasses.add(AsyncConfiguration.class);
 		allClasses.addAll(Arrays.asList(classes));
-		doLoad(allClasses.toArray(new Class<?>[allClasses.size()]));
+		doLoad(allClasses.toArray(new Class<?>[0]));
 	}
 
 	private void doLoad(Class<?>... classes) {
@@ -601,13 +696,13 @@ public class AnnotationDrivenEventListenerTests {
 		static class TestConditionEvaluator {
 
 			public boolean valid(Double ratio) {
-				return new Double(42).equals(ratio);
+				return Double.valueOf(42).equals(ratio);
 			}
 		}
 	}
 
 
-	static abstract class AbstractTestEventListener extends AbstractIdentifiable {
+	abstract static class AbstractTestEventListener extends AbstractIdentifiable {
 
 		@Autowired
 		private EventCollector eventCollector;
@@ -630,10 +725,15 @@ public class AnnotationDrivenEventListenerTests {
 		public void handleString(String content) {
 			collectEvent(content);
 		}
+
+		@EventListener({Boolean.class, Integer.class})
+		public void handleBooleanOrInteger(Serializable content) {
+			collectEvent(content);
+		}
 	}
 
 
-	@EventListener
+	@EventListener(id = "foo")
 	@Target(ElementType.METHOD)
 	@Retention(RetentionPolicy.RUNTIME)
 	@interface FooListener {
@@ -657,7 +757,6 @@ public class AnnotationDrivenEventListenerTests {
 		public void handleContextEvent(ApplicationContextEvent event) {
 			collectEvent(event);
 		}
-
 	}
 
 
@@ -667,17 +766,6 @@ public class AnnotationDrivenEventListenerTests {
 		@EventListener
 		public void cannotBeCalled(String s, Integer what) {
 		}
-	}
-
-	@Component
-	static class InvalidAsyncEventListener {
-
-		@EventListener
-		@Async
-		public Integer asyncCannotUseReply(String payload) {
-			return 42;
-		}
-
 	}
 
 
@@ -690,8 +778,7 @@ public class AnnotationDrivenEventListenerTests {
 			if (event.content == null) {
 				return null;
 			}
-			else if (event.content instanceof String) {
-				String s = (String) event.content;
+			else if (event.content instanceof String s) {
 				if (s.equals("String")) {
 					return event.content;
 				}
@@ -739,7 +826,7 @@ public class AnnotationDrivenEventListenerTests {
 		@EventListener
 		@Async
 		public void handleAsync(AnotherTestEvent event) {
-			assertTrue(!Thread.currentThread().getName().equals(event.content));
+			assertThat(Thread.currentThread().getName()).isNotEqualTo(event.content);
 			collectEvent(event);
 			this.countDownLatch.countDown();
 		}
@@ -785,12 +872,12 @@ public class AnnotationDrivenEventListenerTests {
 
 		@EventListener
 		@Async
+		@Override
 		public void handleAsync(AnotherTestEvent event) {
-			assertTrue(!Thread.currentThread().getName().equals(event.content));
+			assertThat(Thread.currentThread().getName()).isNotEqualTo(event.content);
 			this.eventCollector.addEvent(this, event);
 			this.countDownLatch.countDown();
 		}
-
 	}
 
 
@@ -812,8 +899,9 @@ public class AnnotationDrivenEventListenerTests {
 
 		@EventListener
 		@Async
+		@Override
 		public void handleAsync(AnotherTestEvent event) {
-			assertTrue(!Thread.currentThread().getName().equals(event.content));
+			assertThat(Thread.currentThread().getName()).isNotEqualTo(event.content);
 			this.eventCollector.addEvent(this, event);
 			this.countDownLatch.countDown();
 		}
@@ -903,8 +991,23 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 
+	interface ConditionalEventInterface extends Identifiable {
+
+		void handle(TestEvent event);
+
+		void handleString(String payload);
+
+		void handleBooleanOrInteger(Serializable content);
+
+		void handleTimestamp(Long timestamp);
+
+		void handleRatio(Double ratio);
+	}
+
+
 	@Component
-	static class ConditionalEventListener extends TestEventListener {
+	@Validated
+	static class ConditionalEventListener extends TestEventListener implements ConditionalEventInterface {
 
 		@EventListener(condition = "'OK'.equals(#root.event.msg)")
 		@Override
@@ -912,18 +1015,26 @@ public class AnnotationDrivenEventListenerTests {
 			super.handle(event);
 		}
 
-		@Override
 		@EventListener(condition = "#payload.startsWith('OK')")
+		@Override
 		public void handleString(String payload) {
 			super.handleString(payload);
 		}
 
+		@EventListener({Boolean.class, Integer.class})
+		@Override
+		public void handleBooleanOrInteger(Serializable content) {
+			super.handleBooleanOrInteger(content);
+		}
+
 		@ConditionalEvent("#root.event.timestamp > #p0")
+		@Override
 		public void handleTimestamp(Long timestamp) {
 			collectEvent(timestamp);
 		}
 
 		@ConditionalEvent("@conditionEvaluator.valid(#p0)")
+		@Override
 		public void handleRatio(Double ratio) {
 			collectEvent(ratio);
 		}
@@ -954,6 +1065,23 @@ public class AnnotationDrivenEventListenerTests {
 	}
 
 
+	@Component
+	public static class PublicSubclassWithInheritedEventListener extends TestEventListener {
+	}
+
+
+	static class EventOnPostConstruct {
+
+		@Autowired
+		ApplicationEventPublisher publisher;
+
+		@PostConstruct
+		public void init() {
+			this.publisher.publishEvent("earlyEvent");
+		}
+	}
+
+
 	private static class CustomScope implements org.springframework.beans.factory.config.Scope {
 
 		public boolean active = true;
@@ -977,15 +1105,37 @@ public class AnnotationDrivenEventListenerTests {
 		@Override
 		public void registerDestructionCallback(String name, Runnable callback) {
 		}
+	}
 
-		@Override
-		public Object resolveContextualObject(String key) {
+
+	@Configuration
+	@Import(UseMissingEventListener.class)
+	public static class MissingEventListener {
+
+		@Bean
+		public MyEventListener missing() {
 			return null;
 		}
+	}
 
-		@Override
-		public String getConversationId() {
-			return null;
+
+	@Component
+	public static class MyEventListener {
+
+		@EventListener
+		public void hear(TestEvent e) {
+			throw new AssertionError();
+		}
+	}
+
+
+	public static class UseMissingEventListener {
+
+		@Inject
+		public UseMissingEventListener(Optional<MyEventListener> notHere) {
+			if (notHere.isPresent()) {
+				throw new AssertionError();
+			}
 		}
 	}
 
