@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -21,39 +21,40 @@ import java.io.StringReader;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.jsp.tagext.BodyTag;
-import javax.servlet.jsp.tagext.Tag;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.jsp.tagext.BodyTag;
+import jakarta.servlet.jsp.tagext.Tag;
 import org.dom4j.Document;
 import org.dom4j.Element;
 import org.dom4j.Node;
 import org.dom4j.io.SAXReader;
+import org.junit.jupiter.api.Test;
 
-import org.junit.Test;
-
-import org.springframework.mock.web.test.MockHttpServletRequest;
-import org.springframework.mock.web.test.MockPageContext;
-import org.springframework.tests.sample.beans.TestBean;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
 import org.springframework.validation.Errors;
 import org.springframework.web.servlet.support.BindStatus;
 import org.springframework.web.servlet.support.RequestContext;
 import org.springframework.web.servlet.tags.RequestContextAwareTag;
+import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
+import org.springframework.web.testfixture.servlet.MockPageContext;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
 
 /**
  * @author Rob Harrop
  * @author Juergen Hoeller
  * @author Scott Andrews
  * @author Jeremy Grelle
+ * @author Sam Brannen
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
-public final class OptionsTagTests extends AbstractHtmlElementTagTests {
+class OptionsTagTests extends AbstractHtmlElementTagTests {
 
 	private static final String COMMAND_NAME = "testBean";
 
@@ -87,7 +88,7 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 	}
 
 	@Test
-	public void withCollection() throws Exception {
+	void withCollection() throws Exception {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
 
@@ -98,7 +99,7 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		this.tag.setCssClass("myClass");
 		this.tag.setOnclick("CLICK");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
 
@@ -107,17 +108,97 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Element rootElement = document.getRootElement();
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children.size()).as("Incorrect number of children").isEqualTo(4);
 
 		Element element = (Element) rootElement.selectSingleNode("option[@value = 'UK']");
-		assertEquals("UK node not selected", "selected", element.attribute("selected").getValue());
-		assertEquals("myOption3", element.attribute("id").getValue());
-		assertEquals("myClass", element.attribute("class").getValue());
-		assertEquals("CLICK", element.attribute("onclick").getValue());
+		assertThat(element.attribute("selected").getValue()).as("UK node not selected").isEqualTo("selected");
+		assertThat(element.attribute("id").getValue()).isEqualTo("myOption3");
+		assertThat(element.attribute("class").getValue()).isEqualTo("myClass");
+		assertThat(element.attribute("onclick").getValue()).isEqualTo("CLICK");
+	}
+
+	@Test  // gh-35783
+	void withListWithHtmlEscaping() throws Exception {
+		getPageContext().setAttribute(
+				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
+
+		this.tag.setItems(List.of("café", "Jane \"I Love Cafés\" Smith"));
+		this.tag.setId("myOption");
+
+		var expectedOutput = """
+				<option id="myOption1" value="caf&eacute;">caf&eacute;</option>
+				<option id="myOption2" value="Jane &quot;I Love Caf&eacute;s&quot; Smith">Jane &quot;I Love Caf&eacute;s&quot; Smith</option>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withListWithHtmlEscapingAndCharacterEncoding() throws Exception {
+		this.getPageContext().getResponse().setCharacterEncoding("UTF-8");
+
+		getPageContext().setAttribute(
+				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
+
+		this.tag.setItems(List.of("café", "Jane \"I Love Cafés\" Smith"));
+		this.tag.setId("myOption");
+
+		var expectedOutput = """
+				<option id="myOption1" value="café">café</option>
+				<option id="myOption2" value="Jane &quot;I Love Cafés&quot; Smith">Jane &quot;I Love Cafés&quot; Smith</option>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withMapWithHtmlEscaping() throws Exception {
+		getPageContext().setAttribute(
+				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
+
+		var map = new LinkedHashMap<String, String>();
+		map.put("one", "Jane \"I Love Cafés\" Smith");
+		map.put("two", "Joe Café");
+
+		this.tag.setItems(map);
+		this.tag.setId("myOption");
+
+		var expectedOutput = """
+				<option id="myOption1" value="one">Jane &quot;I Love Caf&eacute;s&quot; Smith</option>
+				<option id="myOption2" value="two">Joe Caf&eacute;</option>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withMapWithHtmlEscapingAndCharacterEncoding() throws Exception {
+		this.getPageContext().getResponse().setCharacterEncoding("UTF-8");
+
+		getPageContext().setAttribute(
+				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
+
+		var map = new LinkedHashMap<String, String>();
+		map.put("one", "Jane \"I Love Cafés\" Smith");
+		map.put("two", "Joe Café");
+
+		this.tag.setItems(map);
+		this.tag.setId("myOption");
+
+		var expectedOutput = """
+				<option id="myOption1" value="one">Jane &quot;I Love Cafés&quot; Smith</option>
+				<option id="myOption2" value="two">Joe Café</option>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
 	}
 
 	@Test
-	public void withCollectionAndDynamicAttributes() throws Exception {
+	void withCollectionAndDynamicAttributes() throws Exception {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -134,7 +215,7 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		this.tag.setDynamicAttribute(null, dynamicAttribute2, dynamicAttribute2);
 
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
 
@@ -143,23 +224,23 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Element rootElement = document.getRootElement();
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children.size()).as("Incorrect number of children").isEqualTo(4);
 
 		Element element = (Element) rootElement.selectSingleNode("option[@value = 'UK']");
-		assertEquals("UK node not selected", "selected", element.attribute("selected").getValue());
-		assertEquals("myOption3", element.attribute("id").getValue());
-		assertEquals("myClass", element.attribute("class").getValue());
-		assertEquals("CLICK", element.attribute("onclick").getValue());
-		assertEquals(dynamicAttribute1, element.attribute(dynamicAttribute1).getValue());
-		assertEquals(dynamicAttribute2, element.attribute(dynamicAttribute2).getValue());
+		assertThat(element.attribute("selected").getValue()).as("UK node not selected").isEqualTo("selected");
+		assertThat(element.attribute("id").getValue()).isEqualTo("myOption3");
+		assertThat(element.attribute("class").getValue()).isEqualTo("myClass");
+		assertThat(element.attribute("onclick").getValue()).isEqualTo("CLICK");
+		assertThat(element.attribute(dynamicAttribute1).getValue()).isEqualTo(dynamicAttribute1);
+		assertThat(element.attribute(dynamicAttribute2).getValue()).isEqualTo(dynamicAttribute2);
 	}
 
 	@Test
-	public void withCollectionAndCustomEditor() throws Exception {
+	void withCollectionAndCustomEditor() throws Exception {
 		PropertyEditor propertyEditor = new SimpleFloatEditor();
 
 		TestBean target = new TestBean();
-		target.setMyFloat(new Float("12.34"));
+		target.setMyFloat(Float.valueOf("12.34"));
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(target, COMMAND_NAME);
 		errors.getPropertyAccessor().registerCustomEditor(Float.class, propertyEditor);
@@ -168,17 +249,17 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.myFloat", false));
 
-		List<Float> floats = new ArrayList<Float>();
-		floats.add(new Float("12.30"));
-		floats.add(new Float("12.31"));
-		floats.add(new Float("12.32"));
-		floats.add(new Float("12.33"));
-		floats.add(new Float("12.34"));
-		floats.add(new Float("12.35"));
+		List<Float> floats = new ArrayList<>();
+		floats.add(Float.valueOf("12.30"));
+		floats.add(Float.valueOf("12.31"));
+		floats.add(Float.valueOf("12.32"));
+		floats.add(Float.valueOf("12.33"));
+		floats.add(Float.valueOf("12.34"));
+		floats.add(Float.valueOf("12.35"));
 
 		this.tag.setItems(floats);
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
 
@@ -187,21 +268,21 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Element rootElement = document.getRootElement();
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 6, children.size());
+		assertThat(children.size()).as("Incorrect number of children").isEqualTo(6);
 
 		Element element = (Element) rootElement.selectSingleNode("option[text() = '12.34f']");
-		assertNotNull("Option node should not be null", element);
-		assertEquals("12.34 node not selected", "selected", element.attribute("selected").getValue());
-		assertNull("No id rendered", element.attribute("id"));
+		assertThat(element).as("Option node should not be null").isNotNull();
+		assertThat(element.attribute("selected").getValue()).as("12.34 node not selected").isEqualTo("selected");
+		assertThat(element.attribute("id")).as("No id rendered").isNull();
 
 		element = (Element) rootElement.selectSingleNode("option[text() = '12.35f']");
-		assertNotNull("Option node should not be null", element);
-		assertNull("12.35 node incorrectly selected", element.attribute("selected"));
-		assertNull("No id rendered", element.attribute("id"));
+		assertThat(element).as("Option node should not be null").isNotNull();
+		assertThat(element.attribute("selected")).as("12.35 node incorrectly selected").isNull();
+		assertThat(element.attribute("id")).as("No id rendered").isNull();
 	}
 
 	@Test
-	public void withItemsNullReference() throws Exception {
+	void withItemsNullReference() throws Exception {
 		getPageContext().setAttribute(
 				SelectTag.LIST_VALUE_PAGE_ATTRIBUTE, new BindStatus(getRequestContext(), "testBean.country", false));
 
@@ -209,7 +290,7 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		this.tag.setItemValue("isoCode");
 		this.tag.setItemLabel("name");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
 
@@ -218,18 +299,18 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Element rootElement = document.getRootElement();
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 0, children.size());
+		assertThat(children.size()).as("Incorrect number of children").isEqualTo(0);
 	}
 
 	@Test
-	public void withoutItems() throws Exception {
+	void withoutItems() throws Exception {
 		this.tag.setItemValue("isoCode");
 		this.tag.setItemLabel("name");
 		this.selectTag.setPath("testBean");
 
 		this.selectTag.doStartTag();
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 		this.tag.doEndTag();
 		this.selectTag.doEndTag();
 
@@ -239,11 +320,11 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Element rootElement = document.getRootElement();
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 0, children.size());
+		assertThat(children.size()).as("Incorrect number of children").isEqualTo(0);
 	}
 
 	@Test
-	public void withoutItemsEnumParent() throws Exception {
+	void withoutItemsEnumParent() throws Exception {
 		BeanWithEnum testBean = new BeanWithEnum();
 		testBean.setTestEnum(TestEnum.VALUE_2);
 		getPageContext().getRequest().setAttribute("testBean", testBean);
@@ -252,9 +333,9 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 
 		this.selectTag.doStartTag();
 		int result = this.tag.doStartTag();
-		assertEquals(BodyTag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(BodyTag.SKIP_BODY);
 		result = this.tag.doEndTag();
-		assertEquals(Tag.EVAL_PAGE, result);
+		assertThat(result).isEqualTo(Tag.EVAL_PAGE);
 		this.selectTag.doEndTag();
 
 		String output = getWriter().toString();
@@ -262,16 +343,16 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 		Node value1 = rootElement.selectSingleNode("option[@value = 'VALUE_1']");
 		Node value2 = rootElement.selectSingleNode("option[@value = 'VALUE_2']");
-		assertEquals("TestEnum: VALUE_1", value1.getText());
-		assertEquals("TestEnum: VALUE_2", value2.getText());
-		assertEquals(value2, rootElement.selectSingleNode("option[@selected]"));
+		assertThat(value1.getText()).isEqualTo("TestEnum: VALUE_1");
+		assertThat(value2.getText()).isEqualTo("TestEnum: VALUE_2");
+		assertThat(rootElement.selectSingleNode("option[@selected]")).isEqualTo(value2);
 	}
 
 	@Test
-	public void withoutItemsEnumParentWithExplicitLabelsAndValues() throws Exception {
+	void withoutItemsEnumParentWithExplicitLabelsAndValues() throws Exception {
 		BeanWithEnum testBean = new BeanWithEnum();
 		testBean.setTestEnum(TestEnum.VALUE_2);
 		getPageContext().getRequest().setAttribute("testBean", testBean);
@@ -282,9 +363,9 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 
 		this.selectTag.doStartTag();
 		int result = this.tag.doStartTag();
-		assertEquals(BodyTag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(BodyTag.SKIP_BODY);
 		result = this.tag.doEndTag();
-		assertEquals(Tag.EVAL_PAGE, result);
+		assertThat(result).isEqualTo(Tag.EVAL_PAGE);
 		this.selectTag.doEndTag();
 
 		String output = getWriter().toString();
@@ -292,12 +373,12 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
 
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 		Node value1 = rootElement.selectSingleNode("option[@value = 'Value: VALUE_1']");
 		Node value2 = rootElement.selectSingleNode("option[@value = 'Value: VALUE_2']");
-		assertEquals("Label: VALUE_1", value1.getText());
-		assertEquals("Label: VALUE_2", value2.getText());
-		assertEquals(value2, rootElement.selectSingleNode("option[@selected]"));
+		assertThat(value1.getText()).isEqualTo("Label: VALUE_1");
+		assertThat(value2.getText()).isEqualTo("Label: VALUE_2");
+		assertThat(rootElement.selectSingleNode("option[@selected]")).isEqualTo(value2);
 	}
 
 	@Override
@@ -305,16 +386,16 @@ public final class OptionsTagTests extends AbstractHtmlElementTagTests {
 		TestBean bean = new TestBean();
 		bean.setName("foo");
 		bean.setCountry("UK");
-		bean.setMyFloat(new Float("12.34"));
+		bean.setMyFloat(Float.valueOf("12.34"));
 		request.setAttribute(COMMAND_NAME, bean);
 
 		List floats = new ArrayList();
-		floats.add(new Float("12.30"));
-		floats.add(new Float("12.31"));
-		floats.add(new Float("12.32"));
-		floats.add(new Float("12.33"));
-		floats.add(new Float("12.34"));
-		floats.add(new Float("12.35"));
+		floats.add(Float.valueOf("12.30"));
+		floats.add(Float.valueOf("12.31"));
+		floats.add(Float.valueOf("12.32"));
+		floats.add(Float.valueOf("12.33"));
+		floats.add(Float.valueOf("12.34"));
+		floats.add(Float.valueOf("12.35"));
 
 		request.setAttribute("floats", floats);
 	}
