@@ -1,11 +1,11 @@
 /*
- * Copyright 2002-2015 the original author or authors.
+ * Copyright 2002-present the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
  *
- *      http://www.apache.org/licenses/LICENSE-2.0
+ *      https://www.apache.org/licenses/LICENSE-2.0
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
@@ -19,43 +19,43 @@ package org.springframework.web.servlet.tags.form;
 import java.beans.PropertyEditor;
 import java.beans.PropertyEditorSupport;
 import java.io.StringReader;
-import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.TreeMap;
-import javax.servlet.jsp.JspException;
-import javax.servlet.jsp.tagext.Tag;
 
+import jakarta.servlet.jsp.JspException;
+import jakarta.servlet.jsp.tagext.Tag;
 import org.dom4j.Attribute;
 import org.dom4j.Document;
 import org.dom4j.DocumentException;
 import org.dom4j.Element;
 import org.dom4j.io.SAXReader;
-
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.propertyeditors.CustomCollectionEditor;
+import org.springframework.beans.testfixture.beans.TestBean;
 import org.springframework.format.Formatter;
 import org.springframework.format.support.FormattingConversionService;
-import org.springframework.tests.sample.beans.TestBean;
 import org.springframework.validation.BeanPropertyBindingResult;
 import org.springframework.validation.BindingResult;
 import org.springframework.web.servlet.support.BindStatus;
 import org.springframework.web.servlet.tags.TransformTag;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 
 /**
  * @author Rob Harrop
  * @author Juergen Hoeller
  * @author Jeremy Grelle
  * @author Dave Syer
+ * @author Sam Brannen
  */
 @SuppressWarnings({ "rawtypes", "unchecked" })
 public class SelectTagTests extends AbstractFormTagTests {
@@ -80,8 +80,20 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setPageContext(getPageContext());
 	}
 
+	@Override
+	protected TestBean createTestBean() {
+		this.bean = new TestBeanWithRealCountry();
+		this.bean.setName("Rob");
+		this.bean.setCountry("UK");
+		this.bean.setSex("M");
+		this.bean.setMyFloat(Float.valueOf("12.34"));
+		this.bean.setSomeIntegerArray(new Integer[]{12, 34});
+		return this.bean;
+	}
+
+
 	@Test
-	public void dynamicAttributes() throws JspException {
+	void dynamicAttributes() throws JspException {
 		String dynamicAttribute1 = "attr1";
 		String dynamicAttribute2 = "attr2";
 
@@ -93,7 +105,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setDynamicAttribute(null, dynamicAttribute2, dynamicAttribute2);
 
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		assertContainsAttribute(output, dynamicAttribute1, dynamicAttribute1);
@@ -101,49 +113,121 @@ public class SelectTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void emptyItems() throws Exception {
+	void emptyItems() throws Exception {
 		this.tag.setPath("country");
 		this.tag.setItems(Collections.EMPTY_LIST);
 
 		this.tag.setItemValue("isoCode");
 		this.tag.setItemLabel("name");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
-		assertEquals("<select id=\"country\" name=\"country\"></select>", output);
+		assertThat(output).isEqualTo("<select id=\"country\" name=\"country\"></select>");
 	}
 
 	@Test
-	public void nullItems() throws Exception {
+	void nullItems() throws Exception {
 		this.tag.setPath("country");
 		this.tag.setItems(null);
 
 		this.tag.setItemValue("isoCode");
 		this.tag.setItemLabel("name");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
-		assertEquals("<select id=\"country\" name=\"country\"></select>", output);
+		assertThat(output).isEqualTo("<select id=\"country\" name=\"country\"></select>");
 	}
 
 	@Test
-	public void withList() throws Exception {
+	void withList() throws Exception {
+		this.tag.setPath("country");
+		this.tag.setItems(Country.getCountries());
+		assertList(true);
+	}
+
+	@Test  // gh-33023
+	void withListWithHtmlEscapingInPath() throws Exception {
+		this.tag.setPath("favoriteCafé");
+		this.tag.setItems(List.of("Cup of Joe", "Jane's Coffee Shop"));
+		this.tag.setSize("2");
+
+		var expectedOutput = """
+				<select id="favoriteCaf&eacute;" name="favoriteCaf&eacute;" size="2">
+				<option value="Cup of Joe">Cup of Joe</option>
+				<option value="Jane&#39;s Coffee Shop">Jane&#39;s Coffee Shop</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-33023
+	void withListWithHtmlEscapingAndCharacterEncodingInPath() throws Exception {
+		this.getPageContext().getResponse().setCharacterEncoding("UTF-8");
+
+		this.tag.setPath("favoriteCafé");
+		this.tag.setItems(List.of("Cup of Joe", "Jane's Coffee Shop"));
+		this.tag.setSize("2");
+
+		var expectedOutput = """
+				<select id="favoriteCafé" name="favoriteCafé" size="2">
+				<option value="Cup of Joe">Cup of Joe</option>
+				<option value="Jane&#39;s Coffee Shop">Jane&#39;s Coffee Shop</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withListWithHtmlEscapingInOptions() throws Exception {
+		this.tag.setPath("name");
+		this.tag.setItems(List.of("café", "Jane \"I Love Cafés\" Smith"));
+		this.tag.setSize("2");
+
+		var expectedOutput = """
+				<select id="name" name="name" size="2">
+				<option value="caf&eacute;">caf&eacute;</option>
+				<option value="Jane &quot;I Love Caf&eacute;s&quot; Smith">Jane &quot;I Love Caf&eacute;s&quot; Smith</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withListWithHtmlEscapingAndCharacterEncodingInOptions() throws Exception {
+		this.getPageContext().getResponse().setCharacterEncoding("UTF-8");
+
+		this.tag.setPath("name");
+		this.tag.setItems(List.of("café", "Jane \"I Love Cafés\" Smith"));
+		this.tag.setSize("2");
+
+		var expectedOutput = """
+				<select id="name" name="name" size="2">
+				<option value="café">café</option>
+				<option value="Jane &quot;I Love Cafés&quot; Smith">Jane &quot;I Love Cafés&quot; Smith</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test
+	void withResolvedList() throws Exception {
 		this.tag.setPath("country");
 		this.tag.setItems(Country.getCountries());
 		assertList(true);
 	}
 
 	@Test
-	public void withResolvedList() throws Exception {
-		this.tag.setPath("country");
-		this.tag.setItems(Country.getCountries());
-		assertList(true);
-	}
-
-	@Test
-	public void withOtherValue() throws Exception {
+	void withOtherValue() throws Exception {
 		TestBean tb = getTestBean();
 		tb.setCountry("AT");
 		this.tag.setPath("country");
@@ -152,7 +236,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withNullValue() throws Exception {
+	void withNullValue() throws Exception {
 		TestBean tb = getTestBean();
 		tb.setCountry(null);
 		this.tag.setPath("country");
@@ -161,17 +245,17 @@ public class SelectTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void withListAndNoLabel() throws Exception {
+	void withListAndNoLabel() throws Exception {
 		this.tag.setPath("country");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 		validateOutput(getOutput(), true);
 	}
 
 	@Test
-	public void withListAndTransformTag() throws Exception {
+	void withListAndTransformTag() throws Exception {
 		this.tag.setPath("country");
 		this.tag.setItems(Country.getCountries());
 		assertList(true);
@@ -182,11 +266,11 @@ public class SelectTagTests extends AbstractFormTagTests {
 		transformTag.setParent(this.tag);
 		transformTag.setPageContext(getPageContext());
 		transformTag.doStartTag();
-		assertEquals("Austria(AT)", getPageContext().findAttribute("key"));
+		assertThat(getPageContext().findAttribute("key")).isEqualTo("Austria(AT)");
 	}
 
 	@Test
-	public void withListAndTransformTagAndEditor() throws Exception {
+	void withListAndTransformTagAndEditor() throws Exception {
 		this.tag.setPath("realCountry");
 		this.tag.setItems(Country.getCountries());
 		BeanPropertyBindingResult bindingResult = new BeanPropertyBindingResult(getTestBean(), "testBean");
@@ -209,11 +293,11 @@ public class SelectTagTests extends AbstractFormTagTests {
 		transformTag.setParent(this.tag);
 		transformTag.setPageContext(getPageContext());
 		transformTag.doStartTag();
-		assertEquals("Austria", getPageContext().findAttribute("key"));
+		assertThat(getPageContext().findAttribute("key")).isEqualTo("Austria");
 	}
 
 	@Test
-	public void withListAndEditor() throws Exception {
+	void withListAndEditor() throws Exception {
 		this.tag.setPath("realCountry");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
@@ -232,13 +316,13 @@ public class SelectTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "testBean", bindingResult);
 		this.tag.doStartTag();
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
-		assertTrue(output.contains("option value=\"AT\" selected=\"selected\">Austria"));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
+		assertThat(output).contains("option value=\"AT\" selected=\"selected\">Austria");
 	}
 
 	@Test
-	public void nestedPathWithListAndEditorAndNullValue() throws Exception {
+	void nestedPathWithListAndEditorAndNullValue() throws Exception {
 		this.tag.setPath("bean.realCountry");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
@@ -252,7 +336,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		bindingResult.getPropertyAccessor().registerCustomEditor(Country.class, new PropertyEditorSupport() {
 			@Override
 			public void setAsText(String text) throws IllegalArgumentException {
-				if (text==null || text.length()==0) {
+				if (text == null || text.isEmpty()) {
 					setValue(null);
 					return;
 				}
@@ -270,14 +354,14 @@ public class SelectTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "testBean", bindingResult);
 		this.tag.doStartTag();
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
-		assertFalse(output.contains("selected=\"selected\""));
-		assertFalse(output.contains("multiple=\"multiple\""));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
+		assertThat(output).doesNotContain("selected=\"selected\"");
+		assertThat(output).doesNotContain("multiple=\"multiple\"");
 	}
 
 	@Test
-	public void nestedPathWithListAndEditor() throws Exception {
+	void nestedPathWithListAndEditor() throws Exception {
 		this.tag.setPath("bean.realCountry");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
@@ -298,13 +382,13 @@ public class SelectTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "testBean", bindingResult);
 		this.tag.doStartTag();
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
-		assertTrue(output.contains("option value=\"AT\" selected=\"selected\">Austria"));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
+		assertThat(output).contains("option value=\"AT\" selected=\"selected\">Austria");
 	}
 
 	@Test
-	public void withListAndEditorAndNullValue() throws Exception {
+	void withListAndEditorAndNullValue() throws Exception {
 		this.tag.setPath("realCountry");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
@@ -329,78 +413,123 @@ public class SelectTagTests extends AbstractFormTagTests {
 		getPageContext().getRequest().setAttribute(BindingResult.MODEL_KEY_PREFIX + "testBean", bindingResult);
 		this.tag.doStartTag();
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
-		assertFalse(output.contains("selected=\"selected\""));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
+		assertThat(output).doesNotContain("selected=\"selected\"");
 	}
 
 	@Test
-	public void withMap() throws Exception {
+	void withMap() throws Exception {
 		this.tag.setPath("sex");
 		this.tag.setItems(getSexes());
-		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+
+		var expectedOutput = """
+				<select id="sex" name="sex">
+				<option value="F">Female</option>
+				<option value="M" selected="selected">Male</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withMapWithHtmlEscapingInOptions() throws Exception {
+		var map = new LinkedHashMap<String, String>();
+		map.put("F", "Jane \"I Love Cafés\" Smith");
+		map.put("M", "Joe Café");
+
+		this.tag.setPath("sex");
+		this.tag.setItems(map);
+
+		var expectedOutput = """
+				<select id="sex" name="sex">
+				<option value="F">Jane &quot;I Love Caf&eacute;s&quot; Smith</option>
+				<option value="M" selected="selected">Joe Caf&eacute;</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
+	}
+
+	@Test  // gh-35783
+	void withMapWithHtmlEscapingAndCharacterEncodingInOptions() throws Exception {
+		this.getPageContext().getResponse().setCharacterEncoding("UTF-8");
+
+		var map = new LinkedHashMap<String, String>();
+		map.put("F", "Jane \"I Love Cafés\" Smith");
+		map.put("M", "Joe Café");
+
+		this.tag.setPath("sex");
+		this.tag.setItems(map);
+
+		var expectedOutput = """
+				<select id="sex" name="sex">
+				<option value="F">Jane &quot;I Love Cafés&quot; Smith</option>
+				<option value="M" selected="selected">Joe Café</option>
+				</select>
+				""".replace("\n", "");
+
+		assertThat(this.tag.doStartTag()).isEqualTo(Tag.SKIP_BODY);
+		assertThat(getOutput()).isEqualTo(expectedOutput);
 	}
 
 	@Test
-	public void withInvalidList() throws Exception {
+	void withInvalidList() {
 		this.tag.setPath("country");
 		this.tag.setItems(new TestBean());
 		this.tag.setItemValue("isoCode");
-		try {
-			this.tag.doStartTag();
-			fail("Must not be able to use a non-Collection typed value as the value of 'items'");
-		}
-		catch (JspException expected) {
-			String message = expected.getMessage();
-			assertTrue(message.contains("items"));
-			assertTrue(message.contains("org.springframework.tests.sample.beans.TestBean"));
-		}
+		assertThatExceptionOfType(JspException.class).as("use a non-Collection typed value as the value of 'items'").isThrownBy(
+				this.tag::doStartTag)
+			.withMessageContaining("items")
+			.withMessageContaining("org.springframework.beans.testfixture.beans.TestBean");
 	}
 
 	@Test
-	public void withNestedOptions() throws Exception {
+	void withNestedOptions() throws Exception {
 		this.tag.setPath("country");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.EVAL_BODY_INCLUDE, result);
+		assertThat(result).isEqualTo(Tag.EVAL_BODY_INCLUDE);
 
 		BindStatus value = (BindStatus) getPageContext().getAttribute(SelectTag.LIST_VALUE_PAGE_ATTRIBUTE);
-		assertEquals("Selected country not exposed in page context", "UK", value.getValue());
+		assertThat(value.getValue()).as("Selected country not exposed in page context").isEqualTo("UK");
 
 		result = this.tag.doEndTag();
-		assertEquals(Tag.EVAL_PAGE, result);
+		assertThat(result).isEqualTo(Tag.EVAL_PAGE);
 		this.tag.doFinally();
 
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
 		assertContainsAttribute(output, "name", "country");
 	}
 
 	@Test
-	public void withStringArray() throws Exception {
+	void withStringArray() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(getNames());
 		assertStringArray();
 	}
 
 	@Test
-	public void withResolvedStringArray() throws Exception {
+	void withResolvedStringArray() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(getNames());
 		assertStringArray();
 	}
 
 	@Test
-	public void withIntegerArray() throws Exception {
+	void withIntegerArray() throws Exception {
 		this.tag.setPath("someIntegerArray");
 		Integer[] array = new Integer[50];
 		for (int i = 0; i < array.length; i++) {
-			array[i] = new Integer(i);
+			array[i] = i;
 		}
 		this.tag.setItems(array);
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -408,24 +537,24 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("someIntegerArray", selectElement.attribute("name").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("someIntegerArray");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", array.length, children.size());
+		assertThat(children).as("Incorrect number of children").hasSameSizeAs(array);
 
 		Element e = (Element) selectElement.selectSingleNode("option[text() = '12']");
-		assertEquals("'12' node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("'12' node not selected").isEqualTo("selected");
 
 		e = (Element) selectElement.selectSingleNode("option[text() = '34']");
-		assertEquals("'34' node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("'34' node not selected").isEqualTo("selected");
 	}
 
 	@Test
-	public void withFloatCustom() throws Exception {
+	void withFloatCustom() throws Exception {
 		PropertyEditor propertyEditor = new SimpleFloatEditor();
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(getTestBean(), COMMAND_NAME);
 		errors.getPropertyAccessor().registerCustomEditor(Float.class, propertyEditor);
@@ -434,36 +563,36 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setPath("myFloat");
 
 		Float[] array = new Float[] {
-				new Float("12.30"), new Float("12.32"), new Float("12.34"), new Float("12.36"),
-				new Float("12.38"), new Float("12.40"), new Float("12.42"), new Float("12.44"),
-				new Float("12.46"), new Float("12.48")
+				Float.valueOf("12.30"), Float.valueOf("12.32"), Float.valueOf("12.34"), Float.valueOf("12.36"),
+				Float.valueOf("12.38"), Float.valueOf("12.40"), Float.valueOf("12.42"), Float.valueOf("12.44"),
+				Float.valueOf("12.46"), Float.valueOf("12.48")
 		};
 
 		this.tag.setItems(array);
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals("select", rootElement.getName());
-		assertEquals("myFloat", rootElement.attribute("name").getValue());
+		assertThat(rootElement.getName()).isEqualTo("select");
+		assertThat(rootElement.attribute("name").getValue()).isEqualTo("myFloat");
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", array.length, children.size());
+		assertThat(children).as("Incorrect number of children").hasSameSizeAs(array);
 
 		Element e = (Element) rootElement.selectSingleNode("option[text() = '12.34f']");
-		assertEquals("'12.34' node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("'12.34' node not selected").isEqualTo("selected");
 
 		e = (Element) rootElement.selectSingleNode("option[text() = '12.32f']");
-		assertNull("'12.32' node incorrectly selected", e.attribute("selected"));
+		assertThat(e.attribute("selected")).as("'12.32' node incorrectly selected").isNull();
 	}
 
 	@Test
-	public void withMultiList() throws Exception {
+	void withMultiList() throws Exception {
 		List list = new ArrayList();
 		list.add(Country.COUNTRY_UK);
 		list.add(Country.COUNTRY_AT);
@@ -473,7 +602,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -481,26 +610,26 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("someList", selectElement.attribute("name").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("someList");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element e = (Element) selectElement.selectSingleNode("option[@value = 'UK']");
-		assertEquals("UK node not selected", "selected", e.attribute("selected").getValue());
-		assertEquals("United Kingdom(UK)", e.getText());
+		assertThat(e.attribute("selected").getValue()).as("UK node not selected").isEqualTo("selected");
+		assertThat(e.getText()).isEqualTo("United Kingdom(UK)");
 
 		e = (Element) selectElement.selectSingleNode("option[@value = 'AT']");
-		assertEquals("AT node not selected", "selected", e.attribute("selected").getValue());
-		assertEquals("Austria(AT)", e.getText());
+		assertThat(e.attribute("selected").getValue()).as("AT node not selected").isEqualTo("selected");
+		assertThat(e.getText()).isEqualTo("Austria(AT)");
 	}
 
 	@Test
-	public void withElementFormatter() throws Exception {
+	void withElementFormatter() throws Exception {
 		this.bean.setRealCountry(Country.COUNTRY_UK);
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
@@ -511,7 +640,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 				return object.getName();
 			}
 			@Override
-			public Country parse(String text, Locale locale) throws ParseException {
+			public Country parse(String text, Locale locale) {
 				return new Country(text, text);
 			}
 		});
@@ -522,7 +651,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -530,22 +659,22 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(1, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(1);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("realCountry", selectElement.attribute("name").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("realCountry");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element e = (Element) selectElement.selectSingleNode("option[@value = 'UK']");
-		assertEquals("UK node not selected", "selected", e.attribute("selected").getValue());
-		assertEquals("United Kingdom", e.getText());
+		assertThat(e.attribute("selected").getValue()).as("UK node not selected").isEqualTo("selected");
+		assertThat(e.getText()).isEqualTo("United Kingdom");
 	}
 
 	@Test
-	public void withMultiListAndElementFormatter() throws Exception {
+	void withMultiListAndElementFormatter() throws Exception {
 		List list = new ArrayList();
 		list.add(Country.COUNTRY_UK);
 		list.add(Country.COUNTRY_AT);
@@ -559,7 +688,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 				return object.getName();
 			}
 			@Override
-			public Country parse(String text, Locale locale) throws ParseException {
+			public Country parse(String text, Locale locale) {
 				return new Country(text, text);
 			}
 		});
@@ -570,7 +699,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -578,33 +707,33 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("someList", selectElement.attribute("name").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("someList");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element e = (Element) selectElement.selectSingleNode("option[@value = 'UK']");
-		assertEquals("UK node not selected", "selected", e.attribute("selected").getValue());
-		assertEquals("United Kingdom", e.getText());
+		assertThat(e.attribute("selected").getValue()).as("UK node not selected").isEqualTo("selected");
+		assertThat(e.getText()).isEqualTo("United Kingdom");
 
 		e = (Element) selectElement.selectSingleNode("option[@value = 'AT']");
-		assertEquals("AT node not selected", "selected", e.attribute("selected").getValue());
-		assertEquals("Austria", e.getText());
+		assertThat(e.attribute("selected").getValue()).as("AT node not selected").isEqualTo("selected");
+		assertThat(e.getText()).isEqualTo("Austria");
 	}
 
 	@Test
-	public void withMultiListAndCustomEditor() throws Exception {
+	void withMultiListAndCustomEditor() throws Exception {
 		List list = new ArrayList();
 		list.add(Country.COUNTRY_UK);
 		list.add(Country.COUNTRY_AT);
 		this.bean.setSomeList(list);
 
 		BeanPropertyBindingResult errors = new BeanPropertyBindingResult(this.bean, COMMAND_NAME);
-		errors.getPropertyAccessor().registerCustomEditor(List.class, new CustomCollectionEditor(LinkedList.class) {
+		errors.getPropertyAccessor().registerCustomEditor(List.class, new CustomCollectionEditor(ArrayList.class) {
 			@Override
 			public String getAsText() {
 				return getValue().toString();
@@ -616,7 +745,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -624,24 +753,24 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("someList", selectElement.attribute("name").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("someList");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element e = (Element) selectElement.selectSingleNode("option[@value = 'UK']");
-		assertEquals("UK node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("UK node not selected").isEqualTo("selected");
 
 		e = (Element) selectElement.selectSingleNode("option[@value = 'AT']");
-		assertEquals("AT node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("AT node not selected").isEqualTo("selected");
 	}
 
 	@Test
-	public void withMultiMap() throws Exception {
+	void withMultiMap() throws Exception {
 		Map someMap = new HashMap();
 		someMap.put("M", "Male");
 		someMap.put("F", "Female");
@@ -651,7 +780,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setItems(getSexes());
 
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -659,25 +788,25 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("someMap", selectElement.attribute("name").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("someMap");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 2, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(2);
 
 		Element e = (Element) selectElement.selectSingleNode("option[@value = 'M']");
-		assertEquals("M node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("M node not selected").isEqualTo("selected");
 
 		e = (Element) selectElement.selectSingleNode("option[@value = 'F']");
-		assertEquals("F node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("F node not selected").isEqualTo("selected");
 	}
 
 	/**
 	 * Tests new support added as a result of <a
-	 * href="http://opensource.atlassian.com/projects/spring/browse/SPR-2660"
+	 * href="https://opensource.atlassian.com/projects/spring/browse/SPR-2660"
 	 * target="_blank">SPR-2660</a>.
 	 * <p>
 	 * Specifically, if the {@code items} attribute is supplied a
@@ -692,11 +821,11 @@ public class SelectTagTests extends AbstractFormTagTests {
 	 * </ul>
 	 */
 	@Test
-	public void withMultiMapWithItemValueAndItemLabel() throws Exception {
+	void withMultiMapWithItemValueAndItemLabel() throws Exception {
 		// Save original default locale.
 		final Locale defaultLocale = Locale.getDefault();
 		// Use a locale that doesn't result in the generation of HTML entities
-		// (e.g., not German, where \u00e4 becomes &auml;)
+		// (for example, not German, where \u00e4 becomes &auml;)
 		Locale.setDefault(Locale.US);
 
 		try {
@@ -727,7 +856,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 			exposeBindingResult(bindingResult);
 
 			int result = this.tag.doStartTag();
-			assertEquals(Tag.SKIP_BODY, result);
+			assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 			String output = getOutput();
 			output = "<doc>" + output + "</doc>";
@@ -735,27 +864,25 @@ public class SelectTagTests extends AbstractFormTagTests {
 			SAXReader reader = new SAXReader();
 			Document document = reader.read(new StringReader(output));
 			Element rootElement = document.getRootElement();
-			assertEquals(2, rootElement.elements().size());
+			assertThat(rootElement.elements()).hasSize(2);
 
 			Element selectElement = rootElement.element("select");
-			assertEquals("select", selectElement.getName());
-			assertEquals("someMap", selectElement.attribute("name").getValue());
+			assertThat(selectElement.getName()).isEqualTo("select");
+			assertThat(selectElement.attribute("name").getValue()).isEqualTo("someMap");
 
 			List children = selectElement.elements();
-			assertEquals("Incorrect number of children", 3, children.size());
+			assertThat(children).as("Incorrect number of children").hasSize(3);
 
 			Element e;
 			e = (Element) selectElement.selectSingleNode("option[@value = '" + austria.getIsoCode() + "']");
-			assertNotNull("Option node not found with Country ISO code value [" + austria.getIsoCode() + "].", e);
-			assertEquals("AT node not selected.", "selected", e.attribute("selected").getValue());
-			assertEquals("AT Locale displayLanguage property not used for option label.",
-					LOCALE_AT.getDisplayLanguage(), e.getData());
+			assertThat(e).as("Option node not found with Country ISO code value [" + austria.getIsoCode() + "].").isNotNull();
+			assertThat(e.attribute("selected").getValue()).as("AT node not selected.").isEqualTo("selected");
+			assertThat(e.getData()).as("AT Locale displayLanguage property not used for option label.").isEqualTo(LOCALE_AT.getDisplayLanguage());
 
 			e = (Element) selectElement.selectSingleNode("option[@value = '" + usa.getIsoCode() + "']");
-			assertNotNull("Option node not found with Country ISO code value [" + usa.getIsoCode() + "].", e);
-			assertEquals("US node not selected.", "selected", e.attribute("selected").getValue());
-			assertEquals("US Locale displayLanguage property not used for option label.",
-					Locale.US.getDisplayLanguage(), e.getData());
+			assertThat(e).as("Option node not found with Country ISO code value [" + usa.getIsoCode() + "].").isNotNull();
+			assertThat(e.attribute("selected").getValue()).as("US node not selected.").isEqualTo("selected");
+			assertThat(e.getData()).as("US Locale displayLanguage property not used for option label.").isEqualTo(Locale.US.getDisplayLanguage());
 
 		}
 		finally {
@@ -765,14 +892,14 @@ public class SelectTagTests extends AbstractFormTagTests {
 	}
 
 	@Test
-	public void multipleForCollection() throws Exception {
+	void multipleForCollection() throws Exception {
 		this.bean.setSomeList(new ArrayList());
 
 		this.tag.setPath("someList");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -780,28 +907,28 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("someList", selectElement.attribute("name").getValue());
-		assertEquals("multiple", selectElement.attribute("multiple").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("someList");
+		assertThat(selectElement.attribute("multiple").getValue()).isEqualTo("multiple");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element inputElement = rootElement.element("input");
-		assertNotNull(inputElement);
+		assertThat(inputElement).isNotNull();
 	}
 
 	@Test
-	public void multipleWithStringValue() throws Exception {
+	void multipleWithStringValue() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		this.tag.setMultiple("multiple");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -809,28 +936,28 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("name", selectElement.attribute("name").getValue());
-		assertEquals("multiple", selectElement.attribute("multiple").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("name");
+		assertThat(selectElement.attribute("multiple").getValue()).isEqualTo("multiple");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element inputElement = rootElement.element("input");
-		assertNotNull(inputElement);
+		assertThat(inputElement).isNotNull();
 	}
 
 	@Test
-	public void multipleExplicitlyTrue() throws Exception {
+	void multipleExplicitlyTrue() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		this.tag.setMultiple("true");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -838,28 +965,28 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("name", selectElement.attribute("name").getValue());
-		assertEquals("multiple", selectElement.attribute("multiple").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("name");
+		assertThat(selectElement.attribute("multiple").getValue()).isEqualTo("multiple");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element inputElement = rootElement.element("input");
-		assertNotNull(inputElement);
+		assertThat(inputElement).isNotNull();
 	}
 
 	@Test
-	public void multipleExplicitlyFalse() throws Exception {
+	void multipleExplicitlyFalse() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		this.tag.setMultiple("false");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -867,25 +994,25 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(1, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(1);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("name", selectElement.attribute("name").getValue());
-		assertNull(selectElement.attribute("multiple"));
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("name");
+		assertThat(selectElement.attribute("multiple")).isNull();
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 	}
 
 	@Test
-	public void multipleWithBooleanTrue() throws Exception {
+	void multipleWithBooleanTrue() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		this.tag.setMultiple(true);
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -893,28 +1020,28 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(2, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(2);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("name", selectElement.attribute("name").getValue());
-		assertEquals("multiple", selectElement.attribute("multiple").getValue());
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("name");
+		assertThat(selectElement.attribute("multiple").getValue()).isEqualTo("multiple");
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element inputElement = rootElement.element("input");
-		assertNotNull(inputElement);
+		assertThat(inputElement).isNotNull();
 	}
 
 	@Test
-	public void multipleWithBooleanFalse() throws Exception {
+	void multipleWithBooleanFalse() throws Exception {
 		this.tag.setPath("name");
 		this.tag.setItems(Country.getCountries());
 		this.tag.setItemValue("isoCode");
 		this.tag.setMultiple(false);
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		output = "<doc>" + output + "</doc>";
@@ -922,46 +1049,41 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals(1, rootElement.elements().size());
+		assertThat(rootElement.elements()).hasSize(1);
 
 		Element selectElement = rootElement.element("select");
-		assertEquals("select", selectElement.getName());
-		assertEquals("name", selectElement.attribute("name").getValue());
-		assertNull(selectElement.attribute("multiple"));
+		assertThat(selectElement.getName()).isEqualTo("select");
+		assertThat(selectElement.attribute("name").getValue()).isEqualTo("name");
+		assertThat(selectElement.attribute("multiple")).isNull();
 
 		List children = selectElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 	}
 
 
 	private void assertStringArray() throws JspException, DocumentException {
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
-		assertTrue(output.startsWith("<select "));
-		assertTrue(output.endsWith("</select>"));
+		assertThat(output).startsWith("<select ");
+		assertThat(output).endsWith("</select>");
 
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals("select", rootElement.getName());
-		assertEquals("name", rootElement.attribute("name").getValue());
+		assertThat(rootElement.getName()).isEqualTo("select");
+		assertThat(rootElement.attribute("name").getValue()).isEqualTo("name");
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element e = (Element) rootElement.selectSingleNode("option[text() = 'Rob']");
-		assertEquals("Rob node not selected", "selected", e.attribute("selected").getValue());
+		assertThat(e.attribute("selected").getValue()).as("Rob node not selected").isEqualTo("selected");
 	}
 
 	private Map getCountryToLocaleMap() {
-		Map map = new TreeMap(new Comparator() {
-			@Override
-			public int compare(Object o1, Object o2) {
-				return ((Country)o1).getName().compareTo(((Country)o2).getName());
-			}
-		});
+		Map map = new TreeMap(Comparator.comparing(o -> ((Country) o).getName()));
 		map.put(Country.COUNTRY_AT, LOCALE_AT);
 		map.put(Country.COUNTRY_NL, LOCALE_NL);
 		map.put(Country.COUNTRY_US, Locale.US);
@@ -973,7 +1095,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 	}
 
 	private Map getSexes() {
-		Map<String, String> sexes = new HashMap<String, String>();
+		Map<String, String> sexes = new LinkedHashMap<>();
 		sexes.put("F", "Female");
 		sexes.put("M", "Male");
 		return sexes;
@@ -984,7 +1106,7 @@ public class SelectTagTests extends AbstractFormTagTests {
 		this.tag.setItemLabel("name");
 		this.tag.setSize("5");
 		int result = this.tag.doStartTag();
-		assertEquals(Tag.SKIP_BODY, result);
+		assertThat(result).isEqualTo(Tag.SKIP_BODY);
 
 		String output = getOutput();
 		validateOutput(output, selected);
@@ -995,31 +1117,20 @@ public class SelectTagTests extends AbstractFormTagTests {
 		SAXReader reader = new SAXReader();
 		Document document = reader.read(new StringReader(output));
 		Element rootElement = document.getRootElement();
-		assertEquals("select", rootElement.getName());
-		assertEquals("country", rootElement.attribute("name").getValue());
+		assertThat(rootElement.getName()).isEqualTo("select");
+		assertThat(rootElement.attribute("name").getValue()).isEqualTo("country");
 
 		List children = rootElement.elements();
-		assertEquals("Incorrect number of children", 4, children.size());
+		assertThat(children).as("Incorrect number of children").hasSize(4);
 
 		Element e = (Element) rootElement.selectSingleNode("option[@value = 'UK']");
 		Attribute selectedAttr = e.attribute("selected");
 		if (selected) {
-			assertTrue(selectedAttr != null && "selected".equals(selectedAttr.getValue()));
+			assertThat(selectedAttr != null && "selected".equals(selectedAttr.getValue())).isTrue();
 		}
 		else {
-			assertNull(selectedAttr);
+			assertThat(selectedAttr).isNull();
 		}
-	}
-
-	@Override
-	protected TestBean createTestBean() {
-		this.bean = new TestBeanWithRealCountry();
-		this.bean.setName("Rob");
-		this.bean.setCountry("UK");
-		this.bean.setSex("M");
-		this.bean.setMyFloat(new Float("12.34"));
-		this.bean.setSomeIntegerArray(new Integer[]{new Integer(12), new Integer(34)});
-		return this.bean;
 	}
 
 	private TestBean getTestBean() {
